use-case4/deploy-c2/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http2
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    istio: gateway
  sessionAffinity: None
  type: ClusterIP
---
