use-case4/deploy-c2/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/set-forwarded-headers: Always
  name: mockbin
spec:
  host: mockbin.apps.example.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: gateway
    weight: 100
  wildcardPolicy: None
---
